examples/test/testpolicy1108.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1108
  namespace: namespace68
spec:
  podSelector:
    matchLabels:
      key2: value27
      key19: value37
      key46: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value22
      podSelector:
        matchLabels:
          key23: value38
